--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">kotlina_lab2</string>
+    <string name="title_activity_ranking">ranking</string>
 </resources>
